frontend/src/components/ThreeDayContentGrid/ThreeDayContentGrid.module.css
.entityLabelRowExpanded {
    background-color: var(--body-background-color);
    padding-top: 8px;
}

.dayHeaderContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2px;
    margin-bottom: 10px;
}

.dayHeaderWeekDay {
    color: var(--text-color-secondary);
    font-size: var(--font-size-day-of-week-entity-label-header);
}

.dayHeaderDay {
    font-size: var(--font-size-day-number-entity-label-header);
}

/* Body (after header) */
.body {
  flex: 1 1 auto;
  min-height: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-color: var(--body-background-color);
}

.entityLabelRow,
.entityRow {
    display: grid;
    grid-template-columns: var(--label-column-width) repeat(var(--num-entity-columns), 1fr);
    /* border: solid #333638 3px; */
}

.entityRow {
    height: 200px;
}

.cell {
    border-right: 2px solid var(--grid-line-color);
    border-top: 2px solid var(--grid-line-color);
    display: flex;
    align-items: center;
    justify-content: center;
}

.entityLabelRow > .cell:last-child,
.entityRow > .cell:last-child {
    border-right: none;
}

